; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mdio.c_b53_mdio_read64.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mdio.c_b53_mdio_read64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { %struct.mii_bus* }
%struct.mii_bus = type { i32 }

@REG_MII_ADDR_READ = common dso_local global i32 0, align 4
@B53_PSEUDO_PHY = common dso_local global i32 0, align 4
@REG_MII_DATA0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b53_device*, i32, i32, i32*)* @b53_mdio_read64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_mdio_read64(%struct.b53_device* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.b53_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.mii_bus*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.b53_device* %0, %struct.b53_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %14 = load %struct.b53_device*, %struct.b53_device** %6, align 8
  %15 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %14, i32 0, i32 0
  %16 = load %struct.mii_bus*, %struct.mii_bus** %15, align 8
  store %struct.mii_bus* %16, %struct.mii_bus** %10, align 8
  store i32 0, i32* %11, align 4
  %17 = load %struct.b53_device*, %struct.b53_device** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @REG_MII_ADDR_READ, align 4
  %21 = call i32 @b53_mdio_op(%struct.b53_device* %17, i32 %18, i32 %19, i32 %20)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %4
  %25 = load i32, i32* %13, align 4
  store i32 %25, i32* %5, align 4
  br label %48

26:                                               ; preds = %4
  store i32 3, i32* %12, align 4
  br label %27

27:                                               ; preds = %42, %26
  %28 = load i32, i32* %12, align 4
  %29 = icmp sge i32 %28, 0
  br i1 %29, label %30, label %45

30:                                               ; preds = %27
  %31 = load i32, i32* %11, align 4
  %32 = shl i32 %31, 16
  store i32 %32, i32* %11, align 4
  %33 = load %struct.mii_bus*, %struct.mii_bus** %10, align 8
  %34 = load i32, i32* @B53_PSEUDO_PHY, align 4
  %35 = load i64, i64* @REG_MII_DATA0, align 8
  %36 = load i32, i32* %12, align 4
  %37 = sext i32 %36 to i64
  %38 = add nsw i64 %35, %37
  %39 = call i32 @mdiobus_read(%struct.mii_bus* %33, i32 %34, i64 %38)
  %40 = load i32, i32* %11, align 4
  %41 = or i32 %40, %39
  store i32 %41, i32* %11, align 4
  br label %42

42:                                               ; preds = %30
  %43 = load i32, i32* %12, align 4
  %44 = add nsw i32 %43, -1
  store i32 %44, i32* %12, align 4
  br label %27

45:                                               ; preds = %27
  %46 = load i32, i32* %11, align 4
  %47 = load i32*, i32** %9, align 8
  store i32 %46, i32* %47, align 4
  store i32 0, i32* %5, align 4
  br label %48

48:                                               ; preds = %45, %24
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}

declare dso_local i32 @b53_mdio_op(%struct.b53_device*, i32, i32, i32) #1

declare dso_local i32 @mdiobus_read(%struct.mii_bus*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
